# sclMath

./: .gitignore  CMakeLists.txt  Readme.md  todo.md
cmake/: sclMathConfig.cmake.in
examples/.3.cmake/: CMakeLists.txt
examples/.3.cmake/src/: main.cpp
examples/1/src/: main.cpp
examples/2/: Makefile
examples/2/src/: main.cpp
examples/3/src/: main.cpp
examples/examplesFromQuantumComputingBook/2.1.1/: CMakeLists.txt
examples/examplesFromQuantumComputingBook/2.1.1/src/: main.cpp
examples/examplesFromQuantumComputingBook/2.1.2/: CMakeLists.txt
examples/examplesFromQuantumComputingBook/2.1.2/src/: main.cpp
examples/examplesFromQuantumComputingBook/2.1.3/src/: main.cpp
examples/examplesFromQuantumComputingBook/2.1.4/src/: main.cpp
include/: matrix.h  matrixOperations.h  sclAngle.hpp  sclComplexMatrix.hpp  sclComplexVector.hpp  sclCopyMatrix.hpp  sclDistance.hpp  sclInnerProduct.hpp  sclMathErrors.h  sclMathUtility.h  sclMathUtility.hpp  sclMatrix.hpp  sclMatrixAddition.hpp  sclMatrixOperations.hpp  sclMatrixScaling.hpp  sclRealMatrix.hpp  sclRealVector.hpp
include/sclMatrix/: sclAngle.hpp  sclCopyMatrix.hpp  sclDistance.hpp  sclInnerProduct.hpp  sclMathErrors.hpp  sclMathUtility.hpp  sclMatrix.hpp  sclMatrixAddition.hpp  sclMatrixComparison.hpp  sclMatrixMultiplication.hpp  sclMatrixOperations.hpp  sclMatrixScaling.hpp  sclMatrixSubtraction.hpp  sclTypeTraits.hpp  sclZeroMatrix.hpp
include/sclVector/: sclComplexVector.hpp  sclRealVector.hpp
src/: matrix.cpp  matrix.h  matrixOperations.cpp  sclAngle.cpp  sclMathErrors.cpp  sclMathUtility.cpp  sclMatrix.cpp  sclMatrixAddition.cpp  sclMatrixComparison.cpp  sclMatrixMultiplication.cpp  sclMatrixOperations.cpp  sclMatrixScaling.cpp  sclMatrixSubtraction.cpp  sclRealMatrix.cpp
src/sclMatrix/: sclComplexMatrix.cpp  sclCopyMatrix.cpp  sclDistance.cpp  sclInnerProduct.cpp  sclMathUtility.cpp
tests/: CMakeLists.txt
tests/.cache/clangd/index/: creation.cpp.2AD08A33C230825E.idx
tests/tests_src/: creation.cpp  test_almostEqual.cpp  test_conjugate.cpp  test_copyMatrix.cpp  test_creation.cpp  test_dagger.cpp  test_get.cpp  test_innerProduct.cpp  test_innerProduct_shape.cpp  test_isHermitian.cpp  test_isSymmetric.cpp  test_matrixCreation2.cpp  test_matrixMultiplication.cpp  test_mul_shape.cpp  test_normSquared.cpp  test_scalarMultiplication.cpp  test_scale.cpp  test_set.cpp  test_set_get.cpp  test_sub.cpp  test_sub_shape.cpp  test_sum.cpp  test_sum_shape.cpp  test_trace.cpp  test_trace_shape.cpp  test_transpose.cpp  test_transpose_shape.cpp  test_zeroMatrix.cpp
uml_design/: Untitled Diagram.drawio
